[gd_scene load_steps=3 format=3 uid="uid://butvqg7bms767"]

[ext_resource type="Script" path="res://overlays/HUD/HUD.gd" id="1_wqwwu"]
[ext_resource type="Script" path="res://overlays/HUD/ArcCanvas.gd" id="2_bgv3t"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_wqwwu")

[node name="StrikeDashMeterBG" type="ColorRect" parent="."]
offset_left = 44.0
offset_top = 571.0
offset_right = 164.0
offset_bottom = 611.0
color = Color(0.360784, 0.360784, 0.360784, 1)

[node name="StrikeDashMeter" type="ColorRect" parent="StrikeDashMeterBG"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 30.0
color = Color(0, 0.54902, 0.87451, 1)

[node name="LblStrikeDash" type="Label" parent="."]
offset_left = 36.0
offset_top = 533.0
offset_right = 175.0
offset_bottom = 556.0
text = "Strike Dash Meter"

[node name="LblSpeed" type="Label" parent="."]
offset_left = 38.0
offset_top = 494.0
offset_right = 177.0
offset_bottom = 517.0
text = "Speed: "

[node name="ArcCanvas" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 90.0
offset_top = 76.0
offset_right = 130.0
offset_bottom = 116.0
script = ExtResource("2_bgv3t")

[node name="LblRings" type="Label" parent="."]
offset_left = 87.0
offset_top = 72.0
offset_right = 147.0
offset_bottom = 95.0
text = "Rings: 0"
